--- a/Rest/miapp/templates/core/index.html
+++ b/Rest/miapp/templates/core/index.html
@@ -32,25 +32,28 @@
       <polygon style="stroke: rgb(0,0,0); stroke-width: 0; stroke-dasharray: none; stroke-linecap: butt; stroke-dashoffset: 0; stroke-linejoin: miter; stroke-miterlimit: 4; fill: rgb(255,255,255); fill-rule: nonzero; opacity: 1;" vector-effect="non-scaling-stroke" points="-50,-50 -50,50 50,50 50,-50 "></polygon>
     </g>
   </svg>
-  <div class="email">
-    <label for="email">Email Address</label>
-    <div class="sec-2">
-      <ion-icon name="mail-outline"></ion-icon>
-      <input type="email" name="email" placeholder="Username@gmail.com"/>
+  <form  method="POST">
+    {% csrf_token %}
+    <div class="email">
+      <label for="email">Email Address</label>
+      <div class="sec-2">
+        <ion-icon name="mail-outline"></ion-icon>
+        <input type="text" name="NombreUsuario" id="Username" placeholder="Ivo Stambuk" required/>
+      </div>
     </div>
-  </div>
-  <div class="password">
-    <label for="password">Password</label>
-    <div class="sec-2">
-      <ion-icon name="lock-closed-outline"></ion-icon>
-      <input class="pas" type="password" name="password" placeholder="············"/>
-      <ion-icon class="show-hide" name="eye-outline"></ion-icon>
+    <div class="password">
+      <label for="password">Password</label>
+      <div class="sec-2">
+        <ion-icon name="lock-closed-outline"></ion-icon>
+        <input class="pas" type="password" name="password" id="Password" placeholder="············" required/>
+        <ion-icon class="show-hide" name="eye-outline"></ion-icon>
+      </div>
     </div>
-  </div>
-  <button class="login">Login </button>
+  </form>
+  <button class="login" type="submit" id="btn">Login </button>
   <div class="footer"><span>Signup</span><span>Forgot Password?</span></div>
 </div>
 <!-- partial -->
-  
+<script src="{% static 'js/js.js' %}"></script>
 </body>
 </html>
