--- a/Rest/miapp/templates/core/index.html
+++ b/Rest/miapp/templates/core/index.html
@@ -38,7 +38,7 @@
       <label for="email">Email Address</label>
       <div class="sec-2">
         <ion-icon name="mail-outline"></ion-icon>
-        <input type="text" name="NombreUsuario" id="Username" placeholder="Ivo Stambuk" required/>
+        <input type="text" name="NombreUsuario" id="Username" placeholder="Usuario" required/>
       </div>
     </div>
     <div class="password">
